<?xml version="1.0"?>
<package>
  <name>squirrel_object_perception</name>
  <version>0.0.0</version>
  <description>squirrel object perception actionserver</description>
  <maintainer email="markus.bajones@acin.tuwien.ac.at">Markus Bajones</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>

</package>
