<?xml version="1.0"?>
<package>
  <name>squirrel_object_perception</name>
  <version>0.1.0</version>
  <description>The squirrel_object_perception package</description>
  <maintainer email="markus.bajones@acin.tuwien.ac.at">Markus Bajones</maintainer>
  <author email="markus.bajones@acin.tuwien.ac.at">Markus Bajones</author>
  <license>GPL</license>
  <url/>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_conversions</build_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <!-- user dependencies -->
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>squirrel_planning_knowledge_msgs</build_depend>
  <build_depend>squirrel_planning_knowledge_msgs</build_depend>
  <build_depend>squirrel_planning_knowledge_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  <run_depend>squirrel_planning_knowledge_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
