<package>
  <name>squirrel_perception</name>
  <version>0.0.1</version>
  <description>meta-package for object perception components</description>
  <maintainer email="bajones@acin.tuwien.ac.at">Markus &quot;Bajo&quot; Bajones</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <run_depend>squirrel_active_exploration</run_depend>
  <run_depend>squirrel_attention</run_depend>
  <run_depend>squirrel_classification</run_depend>
  <run_depend>squirrel_object_perception</run_depend>
  <run_depend>squirrel_perception_waypoint</run_depend>
  <run_depend>squirrel_recognition</run_depend>
  <run_depend>squirrel_segmentation</run_depend>
  <run_depend>squirrel_tracking</run_depend>

  <export>
	<metapackage/>
  </export>
</package>
