<?xml version="1.0"?>
<package>
  <name>squirrel_tracking</name>
  <version>0.0.0</version>
  <description>The squirrel_tracking package</description>

  <maintainer email="bajones@acin.tuwien.ac.at">Markus &quot;Bajo&quot; Bajones</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/squirrel_tracking</url> -->

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>rostest</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>squirrel_object_perception_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>v4r</build_depend>
  <build_depend>suitesparse</build_depend>
  <build_depend>libceres-dev</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>libgoogle-glog-dev</build_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>squirrel_object_perception_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>v4r</run_depend>
  <run_depend>suitesparse</run_depend>
  <run_depend>libceres-dev</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>libgoogle-glog-dev</run_depend>
  
</package>
