<?xml version="1.0"?>
<package>
  <name>squirrel_sensing</name>
  <description>The squirrel_sensing package</description>
  <version>0.1.0</version>
  <maintainer email="jelizaveta@todo.todo">jelizaveta</maintainer>
  <author email="jelizaveta@todo.todo">jelizaveta</author>
  <license>TODO</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- bride default dependencies -->
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>actionlib</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>

  <!-- user dependencies -->
  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>bride_tutorials</build_depend>
  <run_depend>bride_tutorials</run_depend>

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->

</package>
