<?xml version="1.0"?>
<package>
  <name>squirrel_sensing_coordinator</name>
  <description>The squirrel_sensing_coordinator package</description>
  <version>0.0.0</version>
  <maintainer email="jelizaveta@todo.todo">jelizaveta</maintainer>
  <author email="jelizaveta@todo.todo">jelizaveta</author>
  <license>TODO</license>
  <url></url>

  <buildtool_depend>catkin</buildtool_depend>  

  <build_depend>std_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>smach</build_depend>
  <build_depend>smach_ros</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>

  	<build_depend>bride_tutorials</build_depend>
    <run_depend>bride_tutorials</run_depend>
  

  <!-- protected region additional manifest statements on begin -->
  <!-- protected region additional manifest statements end -->
  
  
</package>


